--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,7 +2,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 
-spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.data-username=sa
 spring.datasource.data-password=
 spring.datasource.driver-class-name=org.h2.Driver
